// Timer-related stuff
syntax = "proto3";
package lh_proto;

option go_package = ".;model";
option java_multiple_files = true;
option java_package = "io.littlehorse.common.proto";

import "google/protobuf/timestamp.proto";


enum VariableTypePb {
    JSON_OBJ = 0;
    JSON_ARR = 1;
    DOUBLE = 2;
    BOOL = 3;
    STR = 4;
    INT = 5;
    BYTES = 6;
    VOID = 7;
}

message VariableValuePb {
    VariableTypePb type = 1;
    optional string json_obj = 2;
    optional string json_arr = 3;
    optional double double = 4;
    optional bool bool = 5;
    optional string str = 6;
    optional int64 int = 7;
    optional bytes bytes = 8;
}

message VariablePb {
    VariableValuePb value = 1;
    string wf_run_id = 2;
    int32 thread_run_number = 3;
    string name = 4;
    google.protobuf.Timestamp date = 5;
}
